--- a/Lesson 13/css/medium.css
+++ b/Lesson 13/css/medium.css
@@ -17,6 +17,7 @@
     margin-left: 100px;
     text-align: center;
     color: #14213D;
+    font-size: 20px;
   }
   
   #slogan {
@@ -26,6 +27,7 @@
     text-align: center;
     font-style: italic;
     color: #14213D;
+    font-size: 20px;
   }
   
   header img {
@@ -49,10 +51,6 @@
     
   }
   
-  h3 {
-    text-align: left;
-  }
-  
   #empresa {
     display: block;
   }
@@ -60,6 +58,240 @@
   #final {
     display: block;
   }
+  
+  .events {
+    display: block;
+    margin: auto;
+    margin-left: 10px;
+  }
+  
+  #information {
+    display: block;
+    margin: auto;
+    text-align: center;
+  } 
+  #summary {
+      grid-column: 1/2;
+      margin: auto;
+      background: radial-gradient(#eee, #868175);
+            border: 1px solid #000;
+            padding: 0.5px;
+            box-shadow: 0 0 30px #111;
+            opacity: .8;
+            text-align: center;
+            line-height: 0.5px;
+            color:#14213D;
+            font-size: small;   
+  }
+  
+  .emp  {
+    height:50%;
+    margin-top: 10px;
+  }
+  
+  #empresa h3  {
+    text-align: center;
+  }
+  
+  h3 a {
+    font-size: medium;
+  }
+  
+   #five {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      gap: 20px;
+      margin-top: 30px;
+      height: 100px;
+  }
+
+  #summary {
+      grid-column: 1/2;
+      margin: auto;
+      background: radial-gradient(#eee, #868175);
+            border: 1px solid #000;
+            padding: 0.5px;
+            box-shadow: 0 0 30px #111;
+            opacity: .8;
+            text-align: center;
+            line-height: 0.5px;
+            color:#14213D;
+            font-size: large;
+        
+  }
+
+  #tabla {
+      grid-column: 2/3;
+      margin: auto;
+  }
+  
+  #primero img {
+    margin: auto;
+    display: block;
+    margin-top: 30px;
+    width: 80%;
+  }
+  
+  table, th, td {
+    text-align: center;
+          
+      }
+   /*Barquisimeto*/
+
+#Barqto {
+  margin-top: 30px;
+}
+
+
+.slider {
+  width: 95%;
+  margin: auto;
+  overflow: hidden;
+  margin-top: 20px;
+  
+}
+
+.slider ul {
+  display: flex;
+  padding: 0;
+  width: 400%;
+   heigth: 400px;  
+  animation: cambio 20s infinite alternate linear;
+}
+  
+.slider li {
+  width: 100%;
+  list-style: none;
+  heigth: 400px; 
+}
+
+.slider img {
+  width: 90%;
+  height: 70%;
+  display:block;
+  margin: auto;
+ 
+}
+
+@keyframes cambio {
+  0% {margin-left:0;}
+  20% {margin-left:0;}
+  
+  25% {margin-left:-100%;}
+  45% {margin-left:-100%;}
+  
+  50% {margin-left:-200%;}
+  70% {margin-left:-200%;}
+  
+  75% {margin-left:-300%;}
+  100% {margin-left:-300%;}
+} 
+
+.register {
+  background-color: red;
+  color: white;
+  position: absolute;
+  padding: 0;
+  aling-item: center;
+  justify-content: center;
+  font-size: 1.3rem;
+    left: 0;
+    right: 0;
+  bottom: -10px;
+  font-size: medium;
+  
+}
+  
+  .central {
+    margin-top: -80px;
+  }
+
+  .promotions {
+    display:block;
+  }
+  
+  .economy {
+  text-align: center;
+  margin-left: 0px;
     
+  }
+  
+  .fpr {
+    margin-left: 20px;
+  }
+  
+  .mercabar {
+    width: 80%;
+    display: block;
+    margin: auto;
+  }
+  
+  .culture {
+    text-align: center;
+    margin-left: 0px;
+  
+  }
+  
+  .tpr {
+    margin-left: 20px;
+  }
+  
+  .juarez {
+    width: 80%;
+    display: block;
+    margin: auto;
+    margin-top: 10px;
+    
+  }
+  
+  #vaca {
+    text-align: center;
+  }
+  
+  #vacap {
+    margin-left: 20px;
+  }
+  
+  .barqf {
+    display: grid;
+     grid-template-columns: repeat(auto-fill,minmax(220px, 1fr));
+     max-width: auto;
+     gap: 10px;
+     margin-left: 10px;
+     margin-right: 0;
+     grid-template-rows: repeat(auto-fill,minmax(210px,1fr));
    
+}
+
+figure {
+    display: block;
+    margin: auto;
+    text-align: center;
+}
+
+figure img {
+    width: 100%;
+}
+  
+   /*JOiN*/
+  
+ form {
+        display: block;
+    
+    }
+
+    textarea {
+        border: solid 2px #999;
+        border-radius: 4px;
+        width: 100%;
+        margin: 0;
+    }
+
+    .enviar {
+        margin: auto;
+        padding: 10px;
+        background-color: yellow;
+        margin-top: 20px;
+    }
+  
 }
