--- a/Lesson 13/css/large.css
+++ b/Lesson 13/css/large.css
@@ -231,14 +231,14 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffff88', end
   display: flex;
   padding: 0;
   width: 400%;
-   heigth: 400px;  
+  height:  400px;  
   animation: cambio 20s infinite alternate linear;
 }
   
 .slider li {
   width: 100%;
   list-style: none;
-  heigth: 400px; 
+  height: 400px; 
 }
 
 .slider img {
@@ -268,7 +268,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffff88', end
   color: white;
   position: absolute;
   padding: .5em;
-  aling-item: center;
+  align-items: center;
   justify-content: center;
   font-size: 1.3rem;
     left: 0;
@@ -289,8 +289,8 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffff88', end
   }
   
   .economy {
-    grid-coumn: 3/4;
-    grir-row: 1/2;
+    grid-column: 3/4;
+    grid-row: 1/2;
     text-align: center;
     margin-left: 60px;
     
