--- a/Lesson 13/css/small.css
+++ b/Lesson 13/css/small.css
@@ -244,14 +244,14 @@ h3 a {
   display: flex;
   padding: 0;
   width: 400%;
-   heigth: 400px;  
+   height: 400px;  
   animation: cambio 20s infinite alternate linear;
 }
   
 .slider li {
   width: 100%;
   list-style: none;
-  heigth: 400px; 
+  height: 400px; 
 }
 
 .slider img {
@@ -281,7 +281,7 @@ h3 a {
   color: white;
   position: none;
   padding: .5em;
-  aling-item: center;
+  align-items: center;
   justify-content: center;
   font-size: 1.3rem;
     left: 0;
