--- a/Lesson 13/css/large.css
+++ b/Lesson 13/css/large.css
@@ -266,14 +266,14 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffff88', end
 .register {
   background-color: red;
   color: white;
-  position: absolute;
+  margin-top: 30px;
   padding: .5em;
   align-items: center;
   justify-content: center;
   font-size: 1.3rem;
     left: 0;
     right: 0;
-  bottom: -150px;
+ display: block;
   
 }
   
@@ -343,12 +343,12 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffff88', end
   
   .barqf {
     display: grid;
-     grid-template-columns: repeat(auto-fill,minmax(220px, 1fr));
+     grid-template-columns: 1fr 1fr 1fr 1fr;
      max-width: auto;
      gap: 10px;
      margin-left: 10px;
      margin-right: 0;
-     grid-template-rows: repeat(auto-fill,minmax(210px,1fr));
+     
    
 }
 
