--- a/Lesson 13/css/medium.css
+++ b/Lesson 13/css/medium.css
@@ -190,20 +190,19 @@
 .register {
   background-color: red;
   color: white;
-  position: absolute;
   padding: 0;
   align-items: center;
   justify-content: center;
   font-size: 1.3rem;
     left: 0;
     right: 0;
-  bottom: -10px;
+ display: block;
   font-size: medium;
   
 }
   
   .central {
-    margin-top: -80px;
+    margin-top: 20px;
   }
 
   .promotions {
