--- a/Lesson 13/css/large.css
+++ b/Lesson 13/css/large.css
@@ -527,4 +527,16 @@ iframe {
   text-align: center;
 }
 
+#formcon {
+  background-color: #6d7b99;
+}
+
+#formcon input {
+  background-color: white;
+}
+
+.enviar {
+  background-color: yellow;
+}
+
 }
