--- a/Lesson 13/css/small.css
+++ b/Lesson 13/css/small.css
@@ -66,7 +66,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffff88', end
   }
 
  nav {
-    background-color:  #00589b;
+    background-color: #14213D;
     text-align: center;
 }
 
@@ -371,7 +371,7 @@ form {
 
 form fieldset {
     
-    border: 2px solid #0b7e3f;
+    border: 2px solid #7e260b;
     border-radius: 10px;
     
     }
@@ -381,7 +381,7 @@ legend {
     font-size: 20px;
     font-style: italic;
     font-weight: bold;
-    color:#004777;
+    color: #14213D;
 }
 
 .unico {
@@ -562,6 +562,25 @@ section img {
       width:100%;
       text-align: center;
     }
+
+    #formcon {
+      background-color: #6d7b99;
+    }
+    
+    #formcon input {
+      background-color: white;
+      width: 88%;
+    }
+    
+    .enviar {
+      background-color: yellow;
+    }
+
+    #pform {
+      text-align: center;
+    }
+
+    
 
 
 
