--- a/Lesson 13/css/medium.css
+++ b/Lesson 13/css/medium.css
@@ -439,7 +439,7 @@ section img {
       background-color: #6d7b99;
     }
     
-    #formcon input {
+    .second {
       background-color: white;
     }
     
