--- a/Lesson 13/css/small.css
+++ b/Lesson 13/css/small.css
@@ -567,9 +567,10 @@ section img {
       background-color: #6d7b99;
     }
     
-    #formcon input {
+    .second {
       background-color: white;
       width: 88%;
+      padding: 10px;
     }
     
     .enviar {
