--- a/Lesson 13/css/small.css
+++ b/Lesson 13/css/small.css
@@ -10,8 +10,7 @@ body {
     justify-content: center;
     padding: 5px 0;
     height: 130px;
-    /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#ffff88+0,ffff88+55 */
-background-color: #fCA311; /* Old browsers */
+    background-color: #fCA311; 
 
 
   }
