--- a/Lesson 13/css/small.css
+++ b/Lesson 13/css/small.css
@@ -10,7 +10,7 @@ body {
     justify-content: center;
     padding: 5px 0;
     height: 130px;
-    background-color: #fCA311; 
+    background-color: #FCA311; 
 
 
   }
