--- a/Lesson 13/css/large.css
+++ b/Lesson 13/css/large.css
@@ -10,7 +10,7 @@
     justify-content: center;
     padding: 5px 0;
     height: 200px;
-    background: #FCA311;
+    background-color: #FCA311;
 
   }
   
