--- a/Lesson 13/css/small.css
+++ b/Lesson 13/css/small.css
@@ -2,38 +2,36 @@ body {
     background-color: #E5E5E5;
     font-size: 18px;
     margin: 0;
-  }
-  
-  header {
+}
+
+header {
     display: block;
     align-items: center;
     justify-content: center;
     padding: 5px 0;
     height: 130px;
-    background-color: #FCA311; 
+    background-color: #FCA311;
+}
 
-
-  }
-  
-  #encabezado {
+#encabezado {
     display: block;
     margin-top: -20px;
     margin-left: 50px;
     text-align: center;
     color: #14213D;
     font-size: 20px;
-  }
-  
-  #ciudad {
+}
+
+#ciudad {
     display: block;
     margin-top: -15px;
     margin-left: 50px;
     text-align: center;
     color: #14213D;
     font-size: 16px;
-  }
-  
-  #slogan {
+}
+
+#slogan {
     display: block;
     margin-top: -15px;
     margin-left: 50px;
@@ -41,27 +39,28 @@ body {
     font-style: italic;
     color: #14213D;
     font-size: 16px;
-  }
-  
-  header img {
+}
+
+header img {
     width: 50%;
     height: auto;
     float: center;
     padding: 0px 0px 0px 100px;
     margin-top: -20px;
-  }
-  main,
-  footer {
+}
+
+main,
+footer {
     margin: 1rem auto;
     max-width: auto;
-  }
-  
-  main {
+}
+
+main {
     background-color: #FFFFFF;
     margin: auto;
-  }
+}
 
- nav {
+nav {
     background-color: #14213D;
     text-align: center;
 }
@@ -76,7 +75,8 @@ nav a {
 }
 
 nav ul {
-    list-style: none; /*removes the bullets! */
+    list-style: none;
+    /*removes the bullets! */
     text-align: center;
     margin: 0;
     padding: 0;
@@ -87,119 +87,121 @@ nav button {
     text-align: center;
 }
 
-nav a:hover{
-	color:#E95DA6;
-	background-color:#F5B700;
+nav a:hover {
+    color: #E95DA6;
+    background-color: #F5B700;
 }
 
 nav ul.hide {
     display: none;
     text-align: center;
-
 }
-  table, th, td {
-          margin-left: 150px;
-          width: 300px;
+
+table,
+th,
+td {
+    margin-left: 150px;
+    width: 300px;
     text-align: center;
-          
-      }
-  
-  table, th, td {
-      border: 1px solid black;
-      border-collapse: collapse;
-      margin-left: 80px;
-  }
-  
-  th {
-      background-color: #14213D;
-      color: white;
-  }
-  
-  #primero img {
+}
+
+table,
+th,
+td {
+    border: 1px solid black;
+    border-collapse: collapse;
+    margin-left: 80px;
+}
+
+th {
+    background-color: #14213D;
+    color: white;
+}
+
+#primero img {
     margin: auto;
-    margin-top:130px;
+    margin-top: 130px;
     display: block;
     width: 80%;
     height: 50%;
-  }
-  
-  h1, h3{
+}
+
+h1,
+h3 {
     text-align: center;
     color: #14213D;
 }
-  
-  footer {
+
+footer {
     background-color: #14213D;
     text-align: center;
     height: 50px;
     color: white;
-  }
-  
-  #five {
-      display: block;
-      gap: 20px;
-      margin-top: 30px;
-      height: 100px;
-  }
+}
 
-  #summary {
-      margin: auto;
-      background: radial-gradient(#eee, #868175);
-            border: 1px solid #000;
-            padding: 0.5px;
-            box-shadow: 0 0 30px #111;
-            opacity: .8;
-            text-align: center;
-            line-height: 0.5px;
-            color:#14213D;
-            font-size: large;
-        
-  }
+#five {
+    display: block;
+    gap: 20px;
+    margin-top: 30px;
+    height: 100px;
+}
 
-  #tabla {
+#summary {
+    margin: auto;
+    background: radial-gradient(#eee, #868175);
+    border: 1px solid #000;
+    padding: 0.5px;
+    box-shadow: 0 0 30px #111;
+    opacity: .8;
+    text-align: center;
+    line-height: 0.5px;
+    color: #14213D;
+    font-size: large;
+}
+
+#tabla {
     margin: auto;
     margin-top: 10px;
     width: 100%;
-  }
+}
 
-  #empresa {
-      display: block;
-      padding: 20px;
-  }
+#empresa {
+    display: block;
+    padding: 20px;
+}
 
-  .emp {
-      display:block;
-      margin: auto;
-      border: 1px solid #000;
-      height: 100%;
-      align-items: center;
+.emp {
+    display: block;
+    margin: auto;
+    border: 1px solid #000;
+    height: 100%;
+    align-items: center;
     margin-top: 10px;
-  }
+}
 
-  .emp h2 {
-      text-align: center;
-      color:#14213D;
-  }
+.emp h2 {
+    text-align: center;
+    color: #14213D;
+}
 
- #purpose {
-      padding: 20px;
-  }
+#purpose {
+    padding: 20px;
+}
 
-  address {
+address {
     display: block;
     margin-left: 10px;
-  }
+}
 
 #final {
-  display: block;
-  background-color: #E5E5E5;
+    display: block;
+    background-color: #E5E5E5;
 }
 
 .events {
-  display:block;
-      margin: auto;
-      margin-left: 10px;
-  
+    display: block;
+    margin: auto;
+    margin-left: 10px;
 }
 
 #information {
@@ -209,143 +211,150 @@ nav ul.hide {
 }
 
 .events img {
-  padding: 10px;
+    padding: 10px;
 }
 
 .events h2 {
-  margin-left:-20px;
-  color: #14213D;
+    margin-left: -20px;
+    color: #14213D;
 }
 
 h3 a {
     font-size: 10px;
-  }
+}
+
 
 /*Barquisimeto*/
 
 #Barqto {
-  margin-top: 30px;
+    margin-top: 30px;
 }
 
-
 .slider {
-  width: 95%;
-  margin: auto;
-  overflow: hidden;
-  margin-top: 20px;
-  
+    width: 95%;
+    margin: auto;
+    overflow: hidden;
+    margin-top: 20px;
 }
 
 .slider ul {
-  display: flex;
-  padding: 0;
-  width: 400%;
-   height: 400px;  
-  animation: cambio 20s infinite alternate linear;
+    display: flex;
+    padding: 0;
+    width: 400%;
+    height: 400px;
+    animation: cambio 20s infinite alternate linear;
 }
-  
+
 .slider li {
-  width: 100%;
-  list-style: none;
-  height: 400px; 
+    width: 100%;
+    list-style: none;
+    height: 400px;
 }
 
 .slider img {
-  width: 90%;
-  height: 70%;
-  display:block;
-  margin: auto;
- 
+    width: 90%;
+    height: 70%;
+    display: block;
+    margin: auto;
 }
 
 @keyframes cambio {
-  0% {margin-left:0;}
-  20% {margin-left:0;}
-  
-  25% {margin-left:-100%;}
-  45% {margin-left:-100%;}
-  
-  50% {margin-left:-200%;}
-  70% {margin-left:-200%;}
-  
-  75% {margin-left:-300%;}
-  100% {margin-left:-300%;}
-} 
+    0% {
+        margin-left: 0;
+    }
+    20% {
+        margin-left: 0;
+    }
+    25% {
+        margin-left: -100%;
+    }
+    45% {
+        margin-left: -100%;
+    }
+    50% {
+        margin-left: -200%;
+    }
+    70% {
+        margin-left: -200%;
+    }
+    75% {
+        margin-left: -300%;
+    }
+    100% {
+        margin-left: -300%;
+    }
+}
 
 .register {
-  background-color: red;
-  color: white;
-  position: none;
-  padding: .5em;
-  align-items: center;
-  justify-content: center;
-  font-size: 1.3rem;
+    background-color: red;
+    color: white;
+    position: none;
+    padding: .5em;
+    align-items: center;
+    justify-content: center;
+    font-size: 1.3rem;
     left: 0;
     right: 0;
-  bottom: 0;
-  display: block;
-  margin-top: -130px;
-  
-}
-  
-  .central {
-    margin-left: 10px;
-  }
-
-  .promotions {
+    bottom: 0;
     display: block;
-  }
-  
-  .economy {
+    margin-top: -130px;
+}
+
+.central {
+    margin-left: 10px;
+}
+
+.promotions {
+    display: block;
+}
+
+.economy {
     text-align: center;
     margin-left: 0px;
-    
-  }
-  
-  .fpr {
+}
+
+.fpr {
     margin-left: 10px;
-  }
-  
-  .mercabar {
+}
+
+.mercabar {
     width: 80%;
     display: block;
     margin: auto;
-  }
-  
-  .culture {
+}
+
+.culture {
     text-align: center;
     margin-right: 0;
-  }
-  
-  .tpr {
+}
+
+.tpr {
     margin-left: 10px;
-  }
-  
-  .juarez {
+}
+
+.juarez {
     width: 80%;
     display: block;
     margin: auto;
     margin-top: -5px;
-    
-  }
-  
-  #vaca {
+}
+
+#vaca {
     text-align: center;
-  }
-  
-  #vacap {
+}
+
+#vacap {
     margin-left: 10px;
-  }
-  
-  .barqf {
+}
+
+.barqf {
     display: grid;
-     grid-template-columns: repeat(auto-fill,minmax(220px, 1fr));
-     max-width: auto;
-     gap: 10px;
-     margin-left: 10px;
-     margin-right: 0;
-     grid-template-rows: repeat(auto-fill,minmax(210px,1fr));
-   
+    grid-template-columns: repeat(auto-fill, minmax(220px, 1fr));
+    max-width: auto;
+    gap: 10px;
+    margin-left: 10px;
+    margin-right: 0;
+    grid-template-rows: repeat(auto-fill, minmax(210px, 1fr));
 }
 
 figure {
@@ -358,19 +367,18 @@ figure img {
     width: 100%;
 }
 
- /*JOiN*/
-  
+
+/*JOiN*/
+
 form {
     display: block;
-    font-weight: bold; 
+    font-weight: bold;
 }
 
 form fieldset {
-    
     border: 2px solid #7e260b;
     border-radius: 10px;
-    
-    }
+}
 
 legend {
     text-align: center;
@@ -392,13 +400,12 @@ label {
     margin-top: 10px;
 }
 
-
 .enviar {
     display: block;
     margin: auto;
     padding: 10px;
     background-color: yellow;
-    }
+}
 
 textarea {
     border: solid 2px #999;
@@ -409,7 +416,8 @@ textarea {
 }
 
 input:invalid+span:after {
-    position: absolute; content: '✖';
+    position: absolute;
+    content: '✖';
     padding-left: 5px;
 }
 
@@ -424,161 +432,152 @@ input:valid+span:after {
 }
 
 h2 {
-  text-align: center;
+    text-align: center;
     color: #14213D;
 }
 
+
 /*Directory*/
 
-body{
-  margin: 0;
+body {
+    margin: 0;
 }
 
-h1, h2 {
-  text-align: center;
-  color:#14213D ;
+h1,
+h2 {
+    text-align: center;
+    color: #14213D;
 }
 
 .cards {
-  display: grid;
-   grid-template-columns: 1fr 1fr;
-   max-width: 100%;
-   gap: 5px;
-   margin: 5px;
-   
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    max-width: 100%;
+    gap: 5px;
+    margin: 5px;
 }
 
 .cards p {
-  text-align: center;
+    text-align: center;
 }
 
 section {
-  display: block;
-  margin: auto;
-  background-color: rgb(170, 169, 199);
-  border: 1px solid black;
-  height: 100%;
+    display: block;
+    margin: auto;
+    background-color: rgb(170, 169, 199);
+    border: 1px solid black;
+    height: 100%;
 }
 
 section img {
-  width: 80%;
-  height: auto;
-  margin: auto;
-  display: block;
-  margin-bottom: 10px;
-  box-shadow: 10px 0 20px black;
+    width: 80%;
+    height: auto;
+    margin: auto;
+    display: block;
+    margin-bottom: 10px;
+    box-shadow: 10px 0 20px black;
 }
 
 .boton {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: 1fr 1fr;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
 }
 
-
 .btn {
-  grid-column: 1/2;
-  grid-row: 2/3;
-  display: block;
-  margin: auto;
-  width: 50px;
-  color: red;
+    grid-column: 1/2;
+    grid-row: 2/3;
+    display: block;
+    margin: auto;
+    width: 50px;
+    color: red;
 }
 
 .btn1 {
- grid-column: 2/3;
- grid-row: 2/3;
- display: block;
- margin: auto;
- width: 50px;
-  color: red;
+    grid-column: 2/3;
+    grid-row: 2/3;
+    display: block;
+    margin: auto;
+    width: 50px;
+    color: red;
 }
 
 #tbtn {
-  grid-column: 1/2;
-  grid-row: 1/2;
-  text-align: center;
-  
+    grid-column: 1/2;
+    grid-row: 1/2;
+    text-align: center;
 }
 
 #tbtn1 {
-  grid-column: 2/3;
-  grid-row: 1/2;
-  text-align: center;
+    grid-column: 2/3;
+    grid-row: 1/2;
+    text-align: center;
 }
 
 #dparr {
-  margin-left: 10px;
-  font-size: large;
-  padding-top: 20px;
+    margin-left: 10px;
+    font-size: large;
+    padding-top: 20px;
 }
 
 .list {
-  display: block;
-  margin:auto;
-  width: 100%;
-  
+    display: block;
+    margin: auto;
+    width: 100%;
 }
 
 .list p {
-  text-align: center;
+    text-align: center;
 }
 
-    /*contact*/
 
-    #directiva {
-      padding-top: 40px;
-    }
-    
-    #cus {
-      margin-top: 40px;
-    }
-    
-    #juntad {
-      display: block;
-      margin-left:40px;
-    }
-    
-   
-    
-    #regcontc {
-      display: block;
-    }
-    
-    iframe {
-      display:block;
-      margin: auto;
-      width: 100%;
-      height: 100%;
-    }
-    
-    #contin {
-      display:block;
-      margin:auto;
-      width:100%;
-      text-align: center;
-    }
+/*contact*/
 
-    #formcon {
-      background-color: #6d7b99;
-    }
-    
-    .second {
-      background-color: white;
-      width: 88%;
-      padding: 10px;
-    }
-    
-    .enviar {
-      background-color: yellow;
-    }
+#directiva {
+    padding-top: 40px;
+}
 
-    #pform {
-      text-align: center;
-    }
+#cus {
+    margin-top: 40px;
+}
 
-    
+#juntad {
+    display: block;
+    margin-left: 40px;
+}
 
+#regcontc {
+    display: block;
+}
 
+iframe {
+    display: block;
+    margin: auto;
+    width: 100%;
+    height: 100%;
+}
 
+#contin {
+    display: block;
+    margin: auto;
+    width: 100%;
+    text-align: center;
+}
 
+#formcon {
+    background-color: #6d7b99;
+}
+
+.second {
+    background-color: white;
+    width: 88%;
+    padding: 10px;
+}
+
+.enviar {
+    background-color: yellow;
+}
+
+#pform {
+    text-align: center;
+}
